--- a/05_positioning/style.css
+++ b/05_positioning/style.css
@@ -7,6 +7,7 @@
 
 body {
   background: #222;
+  height: 200vh;
 }
 
 /* Container */
@@ -16,11 +17,7 @@ body {
   height: 600px;
   border: 2px red solid;
   margin: 5rem auto;
-  
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: flex-start;
+  position: relative;
 }
 
 /* Boxes */
@@ -28,7 +25,30 @@ body {
 .box {
   width: 100px;
   height: 100px;
-  background: orange;
+  background: rgb(255, 0, 89);
   border-radius: 1rem;
   border: solid 1px white;
+  padding: 1rem;
+  color: white;
+  font-size: 1.4rem;
+}
+
+/* Positioning */
+
+.relative {
+  position: relative;
+  left: 200px;
+  /* top: 100px; */
+}
+
+.fixed {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+}
+
+.absolute {
+  position:absolute;
+  top: 10px;
+  right: 10px;
 }
