--- a/07_example_website/style.css
+++ b/07_example_website/style.css
@@ -25,6 +25,12 @@ h1, h2, h3, h4, h5, h6 {
   /* TODO: Line Height */
 }
 
+h2 {
+  font-weight: 300;
+  font-size: 3.5rem;
+  line-height: 1.3;
+}
+
 /* 01 Main Navigation */
 
 .main-navigation {
@@ -60,7 +66,7 @@ h1, h2, h3, h4, h5, h6 {
 header {
   padding-top: 3rem;
   background: linear-gradient(
-    to bottom right,
+    to bottom,
     hotpink,
     orangered
   );
@@ -68,12 +74,16 @@ header {
   display: flex;
   justify-content: center;
   align-items: center;
+  position: relative;
+  overflow: hidden;
+  z-index: -2;
 }
 
 .header-container {
   display: flex;
   flex-direction: column;
   align-items: center;
+  
 }
 
 .header-container h1 {
@@ -94,11 +104,80 @@ header {
   color: white;
   text-align: center;
   margin: 0 auto;
+  margin-top: 3rem;
   background: rgb(255, 12, 93);
   padding: 1rem 1.4rem;
-  border-radius: 1rem;
+  border-radius: 1.5rem;
   text-decoration: none;
   font-size: 1.2rem;
   text-transform: uppercase;
   width: auto;
+}
+
+
+.bubble {
+  border-radius: 100%;
+  background: linear-gradient(
+    to top,
+    hotpink,
+    orangered
+  );
+  position: absolute;
+}
+
+.bubble.left {
+  width: 900px;
+  height: 900px;
+  bottom: -450px;
+  left: -450px;
+  /* transform: translate(-50%, 0%); */
+}
+
+.bubble.middle {
+  width: 500px;
+  height: 500px;
+  top: -100px;
+  left: 50%;
+  z-index: -1;
+  /* transform: translate(-50%, 0%); */
+}
+
+/* 03 - Info Sections */
+
+.info {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 3rem 0;
+  gap: 8rem;
+}
+
+.info > article {
+  max-width: 25%;
+}
+
+.info > .img-container {
+  width: 30%;
+}
+
+.info > .img-container img{
+  width: 100%;
+  border-radius: 100%;
+}
+
+.info p {
+  line-height: 1.5;
+}
+
+.info.reverse{
+  flex-direction: row-reverse;
+}
+
+/* 04 - Main Footer */
+
+.main-footer {
+  padding: 2rem 0;
+  text-align: center;
+  background: black;
+  color: white;
 }
